User and Room now contain timestamps
The timestamps are createdAt and updatedAt
